--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,4 +11,6 @@ opt-level = 3
 
 
 [dependencies]
-bevy = { version = "0.15.1", features = ["wayland","dynamic_linking", "bevy_dev_tools"] }
+avian2d = { git = "https://github.com/Jondolf/avian", branch = "main" }
+bevy = { version = "0.16.0", features = ["wayland","dynamic_linking", "bevy_dev_tools"] }
+rand = "0.9.1"
