collision, spawn/despawn cube at mouse loc, smoothie camera

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,10 @@ opt-level = 3
 
 [dependencies]
 avian2d = { git = "https://github.com/Jondolf/avian", branch = "main" }
-bevy = { version = "0.16.0", features = ["wayland","dynamic_linking", "bevy_dev_tools"] }
+bevy = { version = "0.16.0", features = [
+    "wayland",
+    "dynamic_linking",
+    "bevy_dev_tools",
+] }
 bevy-fps-counter = "0.7.0"
 rand = "0.9.1"
